Compiler fixes for GCC when printf %s is NULL

ASTERISK-29146

Change-Id: Ib04bdad87d729f805f5fc620ef9952f58ea96d41